# badkeys

./: .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  badkeys-cli  getbl.sh  pyproject.toml  runci.sh  runpyci.sh  setup.cfg
.github/workflows/: codeql.yml  ghcr.yml  runci.yml  runpyci.yml
badkeys/: __init__.py  checks.py  dkim.py  dnssec.py  jwk.py  runcli.py  scanssh.py  scantls.py  update.py  utils.py
badkeys/allkeys/: __init__.py  block.py
badkeys/rsakeys/: __init__.py  fermat.py  pattern.py  roca.py  rsabias.py  rsabl.py  rsainvalid.py  rsapoly.py  rsarecover.py  rsawarnings.py  sharedprimes.py  smalld.py  smallfactors.py  xzbackdoor.py
docs/: BLOCKLISTFORMAT.md
fuzzing/: fuzzbk  fuzzdkim
tests/: test_blocklist.py  test_dkim.py  test_dnssec.py  test_ecbl.py  test_failures.py  test_fermat.py  test_jwk.py  test_pattern.py  test_regression.py  test_roca.py  test_rsabias.py  test_rsabl.py  test_rsainvalid.py  test_rsapoly.py  test_sharedprimes.py  test_smalld.py  test_smallprimes.py
tests/data/: dnssec-p256-rfc6605.dnskey  dnssec-root-rsa.dnskey  dsa-sshpub-ietf-example.key  ec-p256-rfc-example.key  ed25519-rfc-example.key  jwk-curvename-invalid.json  jwk-ecp256-rfc7517.json  jwk-ed25519-rfc8037.json  jwk-rsa-ok.json  jwk-rsa-rfc7517.json  rsa-debianweak.key  rsa-e1.key  rsa-fermat-hexmodulus.txt  rsa-fermat-pkcs1.key  rsa-fermat-pkcs8.key  rsa-fermat.crt  rsa-fermat.csr  rsa-large-e.key  rsa-nprime.key  rsa-ok.key  rsa-pattern.key  rsa-roca.key  rsa-sharedprimes.key  rsa-small-d.key  rsa-smallfactors-valid.key  rsa-smallfactors.key  rsa-vanity.key  rsanzero.key  rsapoly128.key  rsapoly32.key  rsazerozero.key  x448-ok.key
tests/data/defect/: dh0.key  invalidver.crt  invalidver.csr  private-fragment.key  public-fragment.key
tests/data/dkim/: dkim-broken-char.txt  dkim-broken-length.txt  dkim-comment-quotes.txt  dkim-escaped-quote.txt  dkim-insecure-rfc8463.txt  dkim-valid-gmail.txt
tests/data/dnssec/: dnssec-rsa-large-e.dnskey
tests/data/unsupported/: ecdsa-explicit-pub.key  gost.crt  gost.csr  mldsa.key  sm2-priv.key  sm2-pub.key
