[project]
name = "badkeys"
description = "Check cryptographic keys for known weaknesses"
readme = "README.md"
authors = [{name = "Hanno Böck"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Natural Language :: English",
  "Development Status :: 4 - Beta"
]
license = {text = "MIT"}
keywords = ["security", "cryptography", "rsa"]
requires-python = ">=3.9"
dependencies = [
  "gmpy2",
  "cryptography"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "badkeys.__version__"}

[tool.setuptools_scm]

[project.urls]
"Homepage" = "https://badkeys.info/"
"Source" = "https://github.com/badkeys/badkeys"
"Bug Tracker" = "https://github.com/badkeys/badkeys/issues"

[build-system]
requires = ["setuptools >= 61.0.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project.scripts]
badkeys = "badkeys.runcli:runcli"

[project.optional-dependencies]
urllookup = ["binary-file-search"]
ssh = ["paramiko"]
dkim = ["dnspython"]
