[metadata]
name = badkeys
version = 0.0.1
url = https://badkeys.info/
author = Hanno Böck
author_email = hanno@hboeck.de
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Natural Language :: English
    Development Status :: 3 - Alpha
license = MIT
description = Check cryptographic keys for known weaknesses
long_description = file: README.md
long_description_content_type = text/markdown
keywords = security, cryptography, rsa

[options]
packages=find:
install_requires =
    gmpy2
    cryptography

[options.packages.find]
where=.

[options.entry_points]
console_scripts = 
    badkeys = badkeys.runcli:runcli
